--- a/app/views/algoritmo.html
+++ b/app/views/algoritmo.html
@@ -5,7 +5,7 @@
   <div class="form-group">
     <label for="inputTexto" class="col-sm-2 control-label">Texto</label>
     <div class="col-sm-10">
-      <input type="text" ng-model="palavra" class="form-control" id="inputTexto" placeholder="a b c d e">
+      <input type="text" ng-model="palavra" class="form-control" id="inputTexto" placeholder="a-b-c-d-e">
     </div>
   </div>
 
