--- a/app/views/algoritmo.html
+++ b/app/views/algoritmo.html
@@ -1,18 +1,18 @@
 <div ng-include="'views/relogio.html'"></div>
 
  
-<form class="form-horizontal">
+<form name="formImplementacao" class="form-horizontal">
   <div class="form-group">
     <label for="inputTexto" class="col-sm-2 control-label">Texto</label>
     <div class="col-sm-10">
-      <input type="text" ng-model="palavra" class="form-control" id="inputTexto" placeholder="a-b-c-d-e">
+      <input type="text" required ng-model="palavra" class="form-control" id="inputTexto" placeholder="a-b-c-d-e">
     </div>
   </div>
 
   <div class="form-group">
     <label for="inputNumero" class="col-sm-2 control-label">Numero de combinações</label>
     <div class="col-sm-10">
-      <input type="number" ng-model="numero" class="form-control" id="inputNumero" placeholder="2">
+      <input type="number" required ng-model="numero" class="form-control" id="inputNumero" placeholder="2">
     </div>
   </div>
 
@@ -32,7 +32,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button ng-disabled="!palavra" ng-click="processar()" type="submit" class="btn btn-default">Processar</button>
+      <button ng-disabled="formImplementacao.$invalid" ng-click="processar()" type="submit" class="btn btn-default">Processar</button>
     </div>
   </div>
 </form>
